# ailo

./: .gitignore  CMakeLists.txt  TODO  build.bat
ailo/: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Engine.cpp  Engine.h  OS.cpp  main.cpp
ailo/ailo/: Application.h  Engine.cpp  Engine.h  OS.h
ailo/ailo/ecs/: Scene.h
ailo/ailo/input/: InputSystem.h  InputTypes.h
ailo/ailo/render/: ImGuiProcessor.cpp  RenderAPI.cpp  RenderAPI.h  RenderPrimitive.cpp  Renderer.cpp  Renderer.h  Shader.h
ailo/ailo/utils/: Utils.h
ailo/assets/: Assets.h
ailo/common/: AssetPool.h  LRUCache.cpp  LRUCache.h  SparseSet.h  slot_map.h
ailo/di/: di.h  di_tests.cpp
ailo/ecs/: AnimationSystem.cpp  AnimationSystem.h  AnimatorComponent.h  ECS.h  ImageBasedLighting.cpp  ImageBasedLighting.h  Scene.cpp  Scene.h  SceneLighting.cpp  SceneLighting.h  Transform.cpp  Transform.h
ailo/input/: InputSystem.cpp  InputSystem.h  InputTypes.h
ailo/irradiance/: IrradianceMapGenerator.cpp  IrradianceMapGenerator.h
ailo/platform/: Platform.cpp  Platform.h
ailo/render/: Animation.h  Cleanup.h  CommandBuffer.cpp  CommandBuffer.h  Constants.h  FrameBufferCache.cpp  FrameBufferCache.h  ImGuiProcessor.cpp  ImGuiProcessor.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PipelineCache.cpp  PipelineCache.h  Program.cpp  Program.h  RenderAPI.cpp  RenderAPI.h  RenderPassCache.cpp  RenderPassCache.h  RenderPrimitive.cpp  RenderPrimitive.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ResourceContainer.cpp  ResourceContainer.h  ResourcePtr.h  SemaphoreQueue.cpp  SemaphoreQueue.h  Shader.cpp  Shader.h  Skeleton.cpp  Skeleton.h  Skin.cpp  Skin.h  SwapChain.cpp  SwapChain.h  (+7 more)
ailo/render/vulkan/: Resources.cpp  Resources.h  Texture.cpp  Texture.h  VulkanUtils.cpp  VulkanUtils.h
ailo/resources/: ResourcePtr.cpp  ResourcePtr.h
ailo/shaders/: imgui.frag  imgui.vert  shader.vert
ailo/utils/: ResourceAllocator.h  Utils.h
shaders/: common_brdf.glsl  common_light.glsl  common_math.glsl  common_uniforms.glsl  common_varyings.glsl  hdr.frag  hdr.vert  imgui.frag  imgui.vert  pbr.frag  pbr.vert  shader.frag  shader.vert  shadow.vert  skybox.frag  skybox.vert
tools/resgen/: CMakeLists.txt
tools/resgen/src/: IrradianceMapGenerator.cpp  IrradianceMapGenerator.h  main.cpp
